@@ -21,6 +21,7 @@ Cacti CHANGELOG
 -bug#0001366: Exported data templates do not import the special characters properly
 -bug#0001397: Never use "Delete" as default action in any drop-list in cacti to avoid disaster
 -bug#0001414: COMMENT field can cause rrdtool to report "Legend too long"
+-bug#0001416: Graph Export fails with EXPORT FATAL ERROR: Export path /some/path/root/export is within a system path /root. Can not continue. 
 -bug#0001428: segfault when database tables not present
 -bug#0001429: PHP does not support SNMP V3 Contexts and Cacti needs to act accordingly
 -bug#0001432: array_merge breaks dropdown handling with hardcoded (array-)keys
@@ -33,10 +34,12 @@ Cacti CHANGELOG
 -bug#0001508: More min-height'ed divs when showing graphs
 -bug#0001511: Speed up the processing of poller through bulk deletes
 -bug#0001522: Special(?) charakters break parsing of template data.
+-bug#0001524: Export graphs and Classical Presentation 
 -bug#0001528: ICMP Ping availabilty broken in UI for Windows Servers using IIS
 -bug#0001532: Various crashes in early stages of installation with no database populated.
 -bug#0001534: IP:PORT Granularity issue in cli/add_device.php
 -bug#0001535: Tree Automation Difficult Due to Lack of Parent ID in Tree Nodes
+-bug#0001543: all graphs are exported 
 -bug#0001549: Database crashes with use of array_to_sql_or
 -bug#0001557: Quotes in Text Format graph template field breaks graph
 -bug#0001568: Cacti currently gives a lot of warnings of deprecated functions on PHP 5.3
